--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
-Aggiungi qui i nomi di chi ha contribuito a creare il programma
-mogus
+Alessandro Zingaretti
+Leonardo Sassaroli
+Luca Amatori
+Nicola Anzuinelli
+Andrea Diamantini
